fixed page width visual bug on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@
 
 		.section {
 			margin-bottom: 100px;
+			max-width: 1000px;
 		}
 	}
 }
